--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
 
 body {
     font-family: 'Times New Roman', Times, serif;
-    font-size: 20px;
+    font-size: 100%;
     text-align: center;
     margin: 1px;
-    padding: auto;
-    background: rgb(255, 227, 227);
+    padding: 1px;
+    background: #ffe3e3;
 }
 
 .header {
@@ -29,7 +29,7 @@ a {
     margin: auto;
     width: 70%;
     background-color: rgb(207, 207, 207);
-    padding: 20px;
+    padding: 1%;
     border-radius: 20px;
 }
 .header a.b {
@@ -37,7 +37,7 @@ a {
     margin: auto;
     width: 70%;
     background-color: rgb(207, 207, 207);
-    padding: 20px;
+    padding: 1%;
     border-radius: 20px;
 }
 
@@ -46,7 +46,7 @@ a {
     margin: auto;
     width: 70%;
     background-color: rgb(207, 207, 207);
-    padding: 20px;
+    padding: 1%;
     border-radius: 20px;
 }
 
@@ -55,7 +55,7 @@ a {
     margin: auto;
     width: 70%;
     background-color: rgb(207, 207, 207);
-    padding: 20px;
+    padding: 1%;
     border-radius: 20px;
 }
 
@@ -67,7 +67,7 @@ a {
     margin-right: auto;
     width: 70%;
     background-color: rgb(207, 207, 207);
-    padding: 20px;
+    padding: 1%;
     border-radius: 20px;
 
 }
@@ -83,7 +83,7 @@ a {
 }
 
 .footer {
-    background-color: rgb(248, 64, 64);
+    background-color: #fd6d6d;
     padding: auto;
     padding-bottom: 20px;
     font-weight: bold;
