--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Times New Roman', Times, serif;
-    font-size: 95%;
+    font-size: 20px;
     text-align: center;
     margin: 1px;
     padding: 1px;
