--- a/style.css
+++ b/style.css
@@ -6,15 +6,7 @@ body {
     text-align: center;
     margin: 1px;
     padding: 1px;
-    background: #ffe3e3;
-}
-
-.header {
-    background-color: rgb(255, 255, 255);
-    width: 90%;
-    height: 95%;
-    margin: auto;
-    border-radius: 12px;
+    background: #ffffff;
 }
 
 a {
